package org.worksale.models.appointments;

public enum AppointmentParticipentRole {
    ORGANIZER,
    PARTICIPANT
}
